--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <h1>Shiferaw Hassan</h1>
         <div class="photo">
             <img src="./Image/headshot.jpg">
+           
             
+            <p> my name is shiferaw i'm from southern part of ethiopia called hossana<br>
+            my hoby is playing table tennis</p>
         </div>
     </div>
 </body>
