--- a/resume.html
+++ b/resume.html
@@ -22,8 +22,25 @@
             <img src="./Image/headshot.jpg">
         <h1>My work Experince</h1>
         <Ul>
-            <li>Uber driver</li>
-             material handler
+            <li> *Shiferaw B. Hassan</li>
+             <br>
+            Stone Mountain, GA 30083 
+            shifehassan@gmail.com <br>
+            Summary: Hardworking and reliable worker,<br> excited to learn new skills and pursue new opportunties <br>
+            Experience: City Wide Atlanta, GA Driver November 2014 – October 2018 <br>• Loading and unloading <br>
+            Uber Driver  
+            Customer service November 2018 – December 2019 ▪ Customer service  <br>
+            House of Cheatham <br> 
+            2020 to present  
+            • Material handler  <br>
+            • Customer service  <br>
+            • Troubleshooting incidents  <br>
+            • Stocking  <br>
+            • Trained new staff  
+            • Stock management  <br>
+            Credentials: Royal college Ethiopia 
+            Geography & social science June 2014
+            
             <p>I work as a material handler for House of Cheatham</p>
         </Ul>
     </div>
