--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,8 @@
         </div>
         <H1>About Me</H1>
         <p>
-           my name Shiferaw Hassan i'm orginally from ethiopia..
+            Hello! My name is Shiferaw Hassan.<br> I am originally from Ethiopia. I moved to the US about ten years ago. <br> I was first introduced to computers back home when I was in middle school<br> I started with turning computers on and off, connecting parts changing backgrounds, setting a screen saver, creating files <br>and folders saving, renaming, deleting, and also painting.<br> In high school years were when I spent some time on a pc surfing on the internet, downloading musics, movies,and games from the internet.<br>
+            I had no clue about how programming works Over the years<br> I started teaching myself how to code using different platforms such as free code camp and w3 schools.<br> Finally, I decided to join refcode so I can get a professional guidance about developing.
         </p>
     </div>
     <div class="footer">
