--- a/classmateslink.html
+++ b/classmateslink.html
@@ -20,7 +20,10 @@
         </div>
         <h1>Classmates Links</h1>
         <ul>
-            <li><a href="Link goes here">name goes here!</a></li>
+            <li><a href="https://yibeltaluser.github.io/finalProject/">yibeltal!</a></li>
+        
+            <li><a href="https://tegegnwork.github.io/portfolio/index.html">tegegnwork!</a></li>
+              
             <li><a href="https://girmaye0.github.io/final/">girmaye0!</a></li>
         </ul>
     </div>
