--- a/contact me.html
+++ b/contact me.html
@@ -51,7 +51,7 @@
         <form id="contact" action="" method="post">
           <h3>Would you like to know more</h3>
           <h4>Please send me a message</h4>
-          <shiferawhassang@gmail.com" >CLICK HERE to send me an email</a>
+          <shiferawhassan@gmail.com" >CLICK HERE to send me an email</a>
           <fieldset>
             <input placeholder="Your name" type="text" tabindex="1" required autofocus>
           </fieldset>
